# labnewt

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: demo_bathtub_periodic.py  demo_dambreak.py  demo_freesurfacemodel.py  demo_plot.py  demo_poiseuille.py  demo_taylorgreenvortex.py
labnewt/: __init__.py  _equilibrium.py  _freesurface.py  _macroscopic.py  _moments.py  _shift.py  _vof.py  boundary.py  callback.py  collider.py  diagnostics.py  force.py  gravity.py  macroscopic.py  model.py  netcdfwriter.py  simulate.py  stencil.py  streamer.py
labnewt/_vof/: _Mstar.py  __init__.py  _convert_cells.py  _dMq.py  _dMqI.py  _distribute_Mex.py  _normals.py  vof.py
labnewt/refiller/: __init__.py  base.py  local_average.py  uniform.py
tests/: test_boundary.py  test_collider.py  test_diagnostics.py  test_equilibrium.py  test_force.py  test_freesurface.py  test_freesurfacemodel.py  test_macroscopic.py  test_model.py  test_poiseuille.py  test_streamer.py  test_taylorgreenvortex.py  test_vof.py
tests/_vof/: test_Mstar.py  test_normals.py
tests/integration/: test_bathtub.py  test_poiseuille.py  test_taylorgreenvortex.py
tests/unit/: test_boundary.py  test_callback.py  test_collider.py  test_diagnostics.py  test_equilibrium.py  test_force.py  test_freesurfacemodel.py  test_gravity.py  test_macroscopic.py  test_model.py  test_moments.py  test_netcdfwriter.py  test_stencil.py  test_streamer.py
tests/unit/_vof/: test_Mstar.py  test_convert_cells.py  test_dMq.py  test_dMqI.py  test_distribute_Mex.py  test_normals.py
tests/unit/refiller/: test_base.py  test_local_average.py  test_uniform.py
