[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "labnewt"
dynamic = ["version"]
dependencies = [
  "numpy>=1.28",
  "scipy>=1.11",
  "matplotlib==3.10.5",
  "imageio==2.37.0",
  "imageio-ffmpeg==0.6.0",
]
requires-python = ">=3.10"
authors = [
  { name = "Oscar Tovey Garcia", email = "otoveyg@gmail.com" }
]
description = "Lattice Boltzmann Numerical Wave Tank in Python"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "pytest-cov",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit",
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[project.urls]
Homepage = "https://github.com/oscarjtg/labnewt"
Issues = "https://github.com/oscarjtg/labnewt/issues"

[tool.pytest.ini_options]
addopts = "-q --cov=labnewt --cov-report=term-missing"
testpaths = ["tests"]